array.island.Island.scala.error
Compilation error:
Island:3: error: type mismatch;
 found   : Unit
 required: Int
  num.foreach((element:Int)=>println(element))
             ^