array.island.Island.scala.code
def island(num:Array[Int]): Int = {
  num.foreach((element:Int)=>println(element))
}
    
  
